exports[`test documents a basic component 1`] = `
Object {
  "description": "component",
  "options": Object {},
}
`;

exports[`test documents a deprecated component 1`] = `
Object {
  "description": "component",
  "options": Object {
    "deprecated": "deprecated. use something else",
  },
}
`;
